DTO 변수명 편집, 메인, 상세 조회 가능